# rag-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  frozen_baseline.yaml  redundancy_shift.yaml  scale_100k.yaml  scale_10k.yaml  scale_1k.yaml
data/: sample_qa.jsonl
docs/: experiment_log.md  paper_outline.md  project_plan.md  results_summary.md  weekly_update.md
scripts/: prepare_scaled_corpora.py  run_200_sample_baseline.sh  run_20_sample_sanity.sh  run_baseline.sh  run_redundancy_shift.sh  run_scale_sweep.sh  test_shifts_small_scale.py
src/: __init__.py
src/data/: __init__.py  loaders.py  redundancy.py
src/eval/: __init__.py  metrics.py  retrieval_metrics.py  stability.py
src/generation/: __init__.py  generator.py  phrasing.py  prompting.py
src/pipeline/: __init__.py  run_pipeline.py
src/retrieval/: __init__.py  embedder.py  index.py  retrieve.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_metrics.py  test_phrasing.py  test_redundancy.py
